--- a/product.html
+++ b/product.html
@@ -52,7 +52,22 @@
         </form>
       </div>
       <div class="header__right">
-        <a class="basket" href="shoppingcart.html"><img src="./build/img/basket.png" alt="basket"></a>
+        <span class="basket">
+          <img class="bask__img" src="./build/img/basket.png" alt="basket">
+          <span>0</span>
+        </span>
+        <div class="basket__product basket__product_hidden">
+          <div class="basket__name basket__header">
+            <div>Название товара</div>
+            <div>Количество</div>
+            <div>Цена за шт.</div>
+            <div>Итого</div>
+          </div>
+          <div class="basket__total">
+            Товаров в корзине на сумму:
+            $<span class="basket__total_value">0</span>
+          </div>
+        </div>
         <details class="button__logo">
           <summary class="summary__basket">My Account</summary>
           <div class="dropdown__menu dropdown__menu_account">
@@ -430,6 +445,7 @@
                 </label>
               </div>
             </div>
+
             <div class="product-promo__price_filter-price">
               <p class="product-promo__price_filter-paragraph">price</p>
               <div class="product-promo__price_cent">
@@ -456,139 +472,156 @@
 
           <div class="product-promo__cards">
             <div class="cards__item">
-              <a class="cards__link" href="product.html">
-                <img class="cards__img" src="./build/img/card9.png" alt="card">
-                <div class="cards__price">
-                  <p class="cards__text">Mango People T-shirt</p>
-                  <p class="cards__text__red">$50.00</p>
-                </div>
-              </a>
               <div class="cards__add">
-                <a class="cards__add__link" href="#">
-                  <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
-                  <p class="cards__add__text">Add to Cart</p>
-                </a>
-              </div>
-            </div>
-            <div class="cards__item">
-              <a class="cards__link" href="product.html">
-                <img class="cards__img" src="./build/img/card10.png" alt="card">
-                <div class="cards__price">
-                  <p class="cards__text">Mango People T-shirt</p>
-                  <p class="cards__text__red">$50.00</p>
-                </div>
-              </a>
-              <div class="cards__add">
-                <a class="cards__add__link" href="#">
-                  <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
-                  <p class="cards__add__text">Add to Cart</p>
-                </a>
-              </div>
-            </div>
-            <div class="cards__item">
-              <a class="cards__link" href="product.html">
-                <img class="cards__img" src="./build/img/card3.png" alt="card">
-                <div class="cards__price">
-                  <p class="cards__text">Mango People T-shirt</p>
-                  <p class="cards__text__red">$50.00</p>
-                </div>
-              </a>
-              <div class="cards__add">
-                <a class="cards__add__link" href="#">
-                  <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
-                  <p class="cards__add__text">Add to Cart</p>
-                </a>
-              </div>
-            </div>
-            <div class="cards__item">
-              <a class="cards__link" href="product.html">
-                <img class="cards__img" src="./build/img/card3.png" alt="card">
-                <div class="cards__price">
-                  <p class="cards__text">Mango People T-shirt</p>
-                  <p class="cards__text__red">$50.00</p>
-                </div>
-              </a>
-              <div class="cards__add">
-                <a class="cards__add__link" href="#">
-                  <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
-                  <p class="cards__add__text">Add to Cart</p>
-                </a>
-              </div>
-            </div>
-            <div class="cards__item">
-              <a class="cards__link" href="product.html">
-                <img class="cards__img" src="./build/img/card1.png" alt="card">
-                <div class="cards__price">
-                  <p class="cards__text">Mango People T-shirt</p>
-                  <p class="cards__text__red">$50.00</p>
-                </div>
-              </a>
-              <div class="cards__add">
-                <a class="cards__add__link" href="#">
-                  <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
-                  <p class="cards__add__text">Add to Cart</p>
-                </a>
-              </div>
-            </div>
-            <div class="cards__item">
-              <a class="cards__link" href="product.html">
                 <img class="cards__img" src="./build/img/card8.png" alt="card">
+                <div class="cards__add_button">
+                  <button class="cards__add__link">
+                    <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
+                    Add to Cart
+                  </button>
+                </div>
+              </div>
+              <div class="cards__link">
                 <div class="cards__price">
                   <p class="cards__text">Mango People T-shirt</p>
                   <p class="cards__text__red">$50.00</p>
                 </div>
-              </a>
-              <div class="cards__add">
-                <a class="cards__add__link" href="#">
-                  <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
-                  <p class="cards__add__text">Add to Cart</p>
-                </a>
               </div>
             </div>
             <div class="cards__item">
-              <a class="cards__link" href="product.html">
+              <div class="cards__add">
+                <img class="cards__img" src="./build/img/card9.png" alt="card">
+                <div class="cards__add_button">
+                  <button class="cards__add__link">
+                    <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
+                    Add to Cart
+                  </button>
+                </div>
+              </div>
+              <div class="cards__link">
+                <div class="cards__price">
+                  <p class="cards__text">Mango People T-shirt</p>
+                  <p class="cards__text__red">$50.00</p>
+                </div>
+              </div>
+            </div>
+            <div class="cards__item">
+              <div class="cards__add">
+                <img class="cards__img" src="./build/img/card10.png" alt="card">
+                <div class="cards__add_button">
+                  <button class="cards__add__link">
+                    <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
+                    Add to Cart
+                  </button>
+                </div>
+              </div>
+              <div class="cards__link">
+                <div class="cards__price">
+                  <p class="cards__text">Mango People T-shirt</p>
+                  <p class="cards__text__red">$50.00</p>
+                </div>
+              </div>
+            </div>
+            <div class="cards__item">
+              <div class="cards__add">
+                <img class="cards__img" src="./build/img/card2.png" alt="card">
+                <div class="cards__add_button">
+                  <button class="cards__add__link">
+                    <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
+                    Add to Cart
+                  </button>
+                </div>
+              </div>
+              <div class="cards__link">
+                <div class="cards__price">
+                  <p class="cards__text">Mango People T-shirt</p>
+                  <p class="cards__text__red">$50.00</p>
+                </div>
+              </div>
+            </div>
+            <div class="cards__item">
+              <div class="cards__add">
+                <img class="cards__img" src="./build/img/card3.png" alt="card">
+                <div class="cards__add_button">
+                  <button class="cards__add__link">
+                    <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
+                    Add to Cart
+                  </button>
+                </div>
+              </div>
+              <div class="cards__link">
+                <div class="cards__price">
+                  <p class="cards__text">Mango People T-shirt</p>
+                  <p class="cards__text__red">$50.00</p>
+                </div>
+              </div>
+            </div>
+            <div class="cards__item">
+              <div class="cards__add">
+                <img class="cards__img" src="./build/img/card4.png" alt="card">
+                <div class="cards__add_button">
+                  <button class="cards__add__link">
+                    <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
+                    Add to Cart
+                  </button>
+                </div>
+              </div>
+              <div class="cards__link">
+                <div class="cards__price">
+                  <p class="cards__text">Mango People T-shirt</p>
+                  <p class="cards__text__red">$50.00</p>
+                </div>
+              </div>
+            </div>
+            <div class="cards__item">
+              <div class="cards__add">
+                <img class="cards__img" src="./build/img/card9.png" alt="card">
+                <div class="cards__add_button">
+                  <button class="cards__add__link">
+                    <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
+                    Add to Cart
+                  </button>
+                </div>
+              </div>
+              <div class="cards__link">
+                <div class="cards__price">
+                  <p class="cards__text">Mango People T-shirt</p>
+                  <p class="cards__text__red">$50.00</p>
+                </div>
+              </div>
+            </div>
+            <div class="cards__item">
+              <div class="cards__add">
                 <img class="cards__img" src="./build/img/card7.png" alt="card">
+                <div class="cards__add_button">
+                  <button class="cards__add__link">
+                    <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
+                    Add to Cart
+                  </button>
+                </div>
+              </div>
+              <div class="cards__link">
                 <div class="cards__price">
                   <p class="cards__text">Mango People T-shirt</p>
                   <p class="cards__text__red">$50.00</p>
                 </div>
-              </a>
-              <div class="cards__add">
-                <a class="cards__add__link" href="#">
-                  <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
-                  <p class="cards__add__text">Add to Cart</p>
-                </a>
               </div>
             </div>
             <div class="cards__item">
-              <a class="cards__link" href="product.html">
+              <div class="cards__add">
                 <img class="cards__img" src="./build/img/card6.png" alt="card">
+                <div class="cards__add_button">
+                  <button class="cards__add__link">
+                    <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
+                    Add to Cart
+                  </button>
+                </div>
+              </div>
+              <div class="cards__link">
                 <div class="cards__price">
                   <p class="cards__text">Mango People T-shirt</p>
                   <p class="cards__text__red">$50.00</p>
                 </div>
-              </a>
-              <div class="cards__add">
-                <a class="cards__add__link" href="#">
-                  <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
-                  <p class="cards__add__text">Add to Cart</p>
-                </a>
-              </div>
-            </div>
-            <div class="cards__item">
-              <a class="cards__link" href="product.html">
-                <img class="cards__img" src="./build/img/card13.png" alt="card">
-                <div class="cards__price">
-                  <p class="cards__text">Mango People T-shirt
-                  </p>
-                  <p class="cards__text__red">$50.00</p>
-                </div>
-              </a>
-              <div class="cards__add">
-                <a class="cards__add__link" href="#">
-                  <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
-                  <p class="cards__add__text">Add to Cart</p>
-                </a>
               </div>
             </div>
           </div>
